@@ -1521,7 +1521,7 @@ Overall call timeout (int)
 Production mode - disables some checks without compomising security
 
 **Kind**: static property of [<code>SimpleCCMOptions</code>](#SimpleCCMOptions)  
-**Default**: <code>NODE_ENV === &#x27;production&#x27;</code>  
+**Default**: <code>NODE_ENV &#x3D;&#x3D;&#x3D; &#x27;production&#x27;</code>  
 <a name="SimpleCCMOptions.commConfigCallback"></a>
 
 ### SimpleCCMOptions.commConfigCallback
