@@ -65,8 +65,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
-    "eslint": "^4.13.1",
-    "futoin-asyncsteps": "^1.10.8",
+    "eslint": "^4.14.0",
+    "futoin-asyncsteps": "^1.10.9",
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-eslint": "^20.1.0",
@@ -82,6 +82,6 @@
     "webpack": "^3.10.0"
   },
   "peerDependencies": {
-    "futoin-asyncsteps": "^1.10.8"
+    "futoin-asyncsteps": "^1.10.9"
   }
 }
