@@ -1,4 +1,8 @@
 
+=== (next) ===
+NEW: fixed to assert AsyncSteps as first argument of NativeIface#call()/#.{member}()
+    - aids newcomers with common mistakes
+
 === 1.7.4 (2017-12-17) ===
 FIXED: to parse JSON spec only on 200 request status in browser
 FIXED: completed ES6 conversion
